--- a/PhysicProject/PhysicProject.vcxproj.filters
+++ b/PhysicProject/PhysicProject.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="Collision.h">
       <Filter>Header Files\Collision</Filter>
     </ClInclude>
+    <ClInclude Include="CollisionType.h">
+      <Filter>Header Files\Collision</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files\Rigidbody</Filter>
     </ClCompile>
     <ClCompile Include="Collision.cpp">
+      <Filter>Source Files\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionType.cpp">
       <Filter>Source Files\Collision</Filter>
     </ClCompile>
   </ItemGroup>
