--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -31,9 +31,6 @@
     <Filter Include="Shaders\Shadow">
       <UniqueIdentifier>{ea128037-a029-438f-8438-974796e3d979}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Shaders\Simple">
-      <UniqueIdentifier>{7280002b-d333-488c-9a16-4ebef8f51c88}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Shaders\Texture">
       <UniqueIdentifier>{3730a367-15d9-44ff-bcf7-e86d95b25fa1}</UniqueIdentifier>
     </Filter>
@@ -57,6 +54,9 @@
     </Filter>
     <Filter Include="Shaders\Multitexture">
       <UniqueIdentifier>{20cdc987-302c-4697-9003-10f34ba69577}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shaders\Particle">
+      <UniqueIdentifier>{7280002b-d333-488c-9a16-4ebef8f51c88}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +147,12 @@
     <ClCompile Include="SceneModelsList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ParticleShader.cpp">
+      <Filter>Shaders\Particle</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Model.h">
@@ -218,6 +224,12 @@
     <ClInclude Include="Path.h">
       <Filter>Utility</Filter>
     </ClInclude>
+    <ClInclude Include="ParticleModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleShader.h">
+      <Filter>Shaders\Particle</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FPS.h">
@@ -263,12 +275,6 @@
     <FxCompile Include="ShadowVertexShader.hlsl">
       <Filter>Shaders\Shadow</Filter>
     </FxCompile>
-    <FxCompile Include="Shaders\pixelShader.hlsl">
-      <Filter>Shaders\Simple</Filter>
-    </FxCompile>
-    <FxCompile Include="Shaders\vertexShader.hlsl">
-      <Filter>Shaders\Simple</Filter>
-    </FxCompile>
     <FxCompile Include="TexturePixelShader.hlsl">
       <Filter>Shaders\Texture</Filter>
     </FxCompile>
@@ -280,6 +286,12 @@
     </FxCompile>
     <FxCompile Include="MultiTextureVertexShader.hlsl">
       <Filter>Shaders\Multitexture</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\ParticlePixelShader.hlsl">
+      <Filter>Shaders\Particle</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\ParticleVertexShader.hlsl">
+      <Filter>Shaders\Particle</Filter>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
