Added ObjectPool, Exposed all Constants, added render of model's copy to all shaders. // TODO maybe objectPool do it better

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -125,7 +125,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ParticleModel.h" />
     <ClInclude Include="ParticleShader.h" />
-    <ClInclude Include="Path.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="SceneModelsList.h" />
     <ClInclude Include="MultiTextureShader.h" />
     <ClInclude Include="MyApplication.h" />
